United StatesChange Country, Oracle Worldwide Web Sites Communities I am a... I want to...
Bug ID: 6988346 6986046 breaks tiered
6988346 : 6986046 breaks tiered

Details
Type:
Bug
Submit Date:
2010-09-29
Status:
Closed
Updated Date:
2011-04-23
Project Name:
JDK
Resolved Date:
2011-04-23
Component:
hotspot
OS:
generic
Sub-Component:
compiler
CPU:
generic
Priority:
P2
Resolution:
Fixed
Affected Versions:
hs20
Fixed Versions:
hs20

Related Reports
Backport:
Backport:

Sub Tasks

Description
6986046 introduces two problems that are covered by this CR:
- the profiling code generation needs to be adjusted to use the new ValueStack implementation.
- SunStudio S12u1 has problems with c1_LinearScan.cpp, which results in an incorrect code. The optimization level needs to temporarily lowered.

                                    

Comments
EVALUATION

http://hg.openjdk.java.net/jdk7/hotspot-gc/hotspot/rev/80c9354976b0
                                     
2010-10-09
EVALUATION

http://hg.openjdk.java.net/jdk7/hotspot-comp/hotspot/rev/80c9354976b0
                                     
2010-09-30



Hardware and Software, Engineered to Work Together