6988346: 6986046 breaks tiered

Adjusted profiling code generation to use the new ValueStack implementation; lowered optimization level for c1_LinearScan.cpp on solaris x64.

Reviewed-by: kvn, never